--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,10 @@
+<div class="hero">
+<br />
+<div class="frosty col-xs-10 col-xs-offset-1 text-center">
 <h1>Learn Magic from the Pros</h1>
+<br />
 <h2>I'm an illusioniosts, Michael.</h2>
+<br />
+<%= link_to 'Learn More', url: '#', class: 'btn btn-success' %>
+</div>
+</div>
