--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,7 +10,7 @@
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
-  color:white;
+  color: white;
 }
 
 .hero{
@@ -46,6 +46,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn {
   border-radius:0;
+}
+
+body {
+  background: url('bg.png');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
 
