--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<div id="wrap">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,6 +51,20 @@
 <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 <%= yield %>
+</div>
+<br class="clr" />
+<div id="footer">
+<div class="container">
+<b>Footer Here</b>
+<%= link_to 'Link', '#'%>
 
+</div>
+</div>
 </body>
 </html>
+
+
+
+
+
+
