Add show page to instructor page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 <div id="footer">
 <div class="container">
 <b>Footer Here</b>
-<%= link_to 'Link', '#'%>
+<%= link_to 'Teach a Course', new_instructor_course_path %>
 
 </div>
 </div>
