--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,7 +5,7 @@
 <br />
 <h2>I'm an illusioniosts, Michael.</h2>
 <br />
-<%= link_to 'Learn More', url: '#', class: 'btn btn-success' %>
+ <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
 </div>
 </div>
 
