Add instructor page

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,7 +4,9 @@
   <hr />
 
   <% @courses.each do |course| %>
-  <h3 class="text-center"><%= course.title %></h3>
+  <h3 class="text-center">
+    <%= link_to course.title, course_path(course) %>
+  </h3>
   <br />
   <div class="col-sm-8 col-xs-12">
     <%= course.description %>
