--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,6 +11,8 @@
   <div class="col-sm-8 col-xs-12">
     <%= course.description %>
   </div>
+  <br />
+  <%= image_tag course.image, class: 'img-responsive' %>
   <div class="col-sm-4 col-xs-12 text-center">
     <%= link_to 'Button', '#', class: 'btn btn-primary btn-large' %>
   </div>
