--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -29,6 +29,8 @@
         <b><%= lesson.title %></b>
         -
         <%= lesson.subtitle %>
+        <%= image_tag course.image, class: 'img-responsive' %>
+
       
       <% end %>
       </div>
