--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -1,10 +1,11 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1 ">
 <h1>Add a new course </h1>
-<%= simple_form_for @course, url: instructor_courses_path do |f| %>
+<%= simple_form_for @course, url: instructor_courses_path, html: {multipart: true} do |f| %>
 <%= f.input :title %>
 <%= f.input :description %>
 <%= f.input :cost %>
+<%= f.input :image %>
 <br />
 <%= f.submit "Create", class: 'btn btn-primary' %>
 <br />
