--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,8 +1,11 @@
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
   <h1 class="text-center"><%= current_course.title %></h1>
+  <%= image_tag current_course.image, class: 'img-responsive' %>
   <br />
   <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning pull-right' %>
+
+
   <br />
   <div class="text-center">
     <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
@@ -13,12 +16,13 @@
     <li>
       <%= section.title %>
       <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs'%>
-<ul>
+          <ul>
           <% section.lessons.each do |lesson| %>
             <li>
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
+              <br />
             </li>
           <% end %>
         </ul>
