--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -6,6 +6,7 @@
 <%= f.input :title %>
 <br />
 <%= f.input :subtitle %>
+<%= f.input :video %>
 <br />
 <%= f.submit "Add the lesson", class: 'btn btn-primary' %>
 <% end %>
