--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link href="//vjs.zencdn.net/5.8/video-js.min.css" rel="stylesheet">
+  <script src="//vjs.zencdn.net/5.8/video.min.js"></script>
 </head>
 <body>
 <div id="wrap">
