--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,7 +30,7 @@
         -
         <%= lesson.subtitle %>
         
-        <%= image_tag course.image, class: 'img-responsive' %> 
+        <%= image_tag @course.image, class: 'img-responsive' %> 
       
       <% end %>
       </div>
