--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -85,7 +85,14 @@ body {
   width: 250px;
 }
 
+.lesson {
+  background-color: black;
+}
 
+.section {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+}
 
 
 
