Add AJAX for lesson repositioning

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  *= require_self
  *= require_tree .
  *= require devise_bootstrap_views
+ *= require jquery-ui
  */
 
 @import "bootstrap-sprockets";
