Design instructor show page

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -32,13 +32,25 @@
     <li>
       <%= section.title %>
       <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs'%>
+          <br class="clr" />
+          <br class="clr" />
           <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li data-update-url=<%= instructor_lesson_path(lesson) %>>
+            <li data-update-url="<%= instructor_lesson_path(lesson) %>" >
+              <div class="col-xs-1">
+                <br />
+               <span class="glyphicon glyphicon-list"></span>
+             </div>
+             <div class="col-xs-11 text-center">
+               <p>
               <b><%= lesson.title %></b>
+            </p>
               -
+              <p>
               <%= lesson.subtitle %>
-              <br />
+            </p>
+            </div>
+            <br class="clr" />
             </li>
           <% end %>
         </ul>
