--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -91,6 +91,12 @@ body {
   height:130px;
 }
 
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding:20px;
+  margin:20px;
+}
 
 .lesson a {
   color:white;
@@ -110,5 +116,35 @@ body {
   padding: 20px;
 }
 
+
+
+ul .header .glyphicon {
+  font-size:20px;
+}
+
+
+ul {
+  list-style-type: none;
+}
+
+.lessons li {
+  background:black;
+  color:white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding:8px;
+  font-size: 15px;
+}
+
+.lessons li b {
+  font-size:25px;
+  font-weight: 100;
+}
+
+
+.lessons li p {
+  margin:0;
+}
 
 
