--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -23,9 +23,11 @@
 
 
   <br />
-  <div class="text-center">
-    <%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
-  </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
+     Add New Section...
+    </button>
 
   <ul>
     <% current_course.sections.each do |section| %>
@@ -60,3 +62,33 @@
   </ul>
   
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="newSectionModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="newSectionModalLabel">Add New Section</h4>
+      </div>
+      <div class="modal-body">
+          <%= simple_form_for @section, url: instructor_course_sections_path(current_course) do |f| %>
+          <%= f.input :title %>
+          <br />
+          
+          <br />
+          <br />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a section", class: 'btn btn-primary' %>
+      </div>
+       <% end %>
+    </div>
+  </div>
+</div>
+
+
+
+
