--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -2,10 +2,20 @@
   border-radius:0;
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 200;
-  box-shadow: 0px 1px 3px #2a2a2a;
-  background: url('bg.png');
+ /* box-shadow: 0px 1px 3px #2a2a2a;*/
+/*  background: url('bg.png');
+*/
+  background-color: #1EC952;
 
 }
+
+.navi li {
+  color: white;
+}
+
+/*#footer {
+  background-color: #1EC952;
+}*/
 
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
@@ -14,7 +24,7 @@
 }
 
 .hero{
-  background: url('hero.jpeg') no-repeat center center fixed;
+  background: url('https://images.unsplash.com/photo-1447069387593-a5de0862481e?crop=entropy&fit=crop&fm=jpg&h=725&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1450') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
