--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,11 +1,9 @@
 <script>
   $(function() {
-
-    $('.new-lesson-button').click(function( event ) {
+    $('.new-lesson-button').click(function() {
       var lessonUrl = $(event.target).data('lesson-url');
       $('#newLessonForm').attr('action', lessonUrl);
     });
-
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -16,7 +14,17 @@
         });
       }
     });
-   });
+    $('.sections').sortable({
+      update: function( event, ui ) {
+        $.ajax({
+          type: 'PUT',
+          url: ui.item.data('update-url'),
+          dataType: 'json',
+          data: { section: { row_order_position: ui.item.index() } }
+        });
+      }
+    });
+  });
 </script>
 
 
@@ -35,32 +43,43 @@
      Add New Section...
     </button>
 
-  <ul>
-    <% current_course.sections.each do |section| %>
-    <li>
-      <%= section.title %>
-      <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs'%>
+    <ul class="sections">
+      <% current_course.sections.rank(:row_order).each do |section| %>
+      <li data-update-url="<%= instructor_section_path(section)%>" >
+        <div class="header pull-left">
+          <span class="glyphicon glyphicon-list"></span>
+        <%= section.title %>
+        </div>
+
+      <!-- Button trigger modal -->
+      <button class="btn btn-primary btn-sm pull-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">  
+        New Lesson...
+      </button>
+      
+      
+
           <br class="clr" />
           <br class="clr" />
-          <ul class="lessons">
-          <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li data-update-url="<%= instructor_lesson_path(lesson) %>" >
-              <div class="col-xs-1">
-                <br />
-               <span class="glyphicon glyphicon-list"></span>
-             </div>
-             <div class="col-xs-11 text-center">
-               <p>
-              <b><%= lesson.title %></b>
-            </p>
-              -
-              <p>
-              <%= lesson.subtitle %>
-            </p>
-            </div>
-            <br class="clr" />
-            </li>
-          <% end %>
+
+    <ul class="lessons">
+     <% section.lessons.rank(:row_order).each do |lesson| %>
+      <li data-update-url="<%= instructor_lesson_path(lesson) %>" >
+        <div class="col-xs-1">
+          <br />
+          <span class="glyphicon glyphicon-list"></span>
+          </div>
+          <div class="col-xs-11 text-center">
+          <p>
+        <b><%= lesson.title %></b>
+        </p>
+        -
+        <p>
+        <%= lesson.subtitle %>
+        </p>
+        </div>
+        <br class="clr" />
+       </li>
+       <% end %>
         </ul>
         <br class="clr" />
       </li>
@@ -69,10 +88,6 @@
   
 </div>
 
-<!-- Button trigger modal -->
-<button class="btn btn-primary btn-sm pull-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">  
-  New Lesson
-</button>
 
 <!-- Modal -->
 <div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="newSectionModalLabel">
@@ -113,8 +128,6 @@
           <%= f.input :title %>
           <%= f.input :subtitle %>
           <%= f.input :video %>
-         
-        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
