--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -33,9 +33,38 @@ body {
   margin-top: 30px;
 }
 
+#footer {
+  margin-bottom: 0px;
+}
+
+.social-button {
+  width: 32px;
+  margin: 4px;
+}
 
 
+.social a:footer {
+  text-decoration: none;
+}
 
+
+$footer-height-mobile: 200px;
+@media (max-width: 750px) {
+  #footer {
+    height:$footer-height-mobile;
+  }
+
+  #wrap {
+    margin: 0 auto -$footer-height-mobile;
+    /* Pad bottom by footer height */
+    padding: 0 0 $footer-height-mobile;
+  }
+
+  #footer .social {
+    margin-top:10px;
+  }
+
+}
 
 
 
