--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="//vjs.zencdn.net/5.8/video-js.min.css" rel="stylesheet">
   <script src="//vjs.zencdn.net/5.8/video.min.js"></script>
 </head>
@@ -60,13 +60,61 @@
 
 <div id="footer">
 <div class="container">
-<b>Footer Here</b>
-<%= link_to 'Teach a Course', new_instructor_course_path %>
+  <div class="col-xs-12 col-sm-3">
+    
+  <div class="col-xs-12 col-sm-3">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-xs-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        ufarruh@thefirehoseproject.com
+        <br />
+        One Lincol ave
+        <br />
+        San Francisco CA, 94121
+      </div>
+      <div class="col-xs-12 col-sm-3 social ">
+        <b>Social</b>
+        <br />
+        <br />
 
+          <%= image_tag 'github.png', class: 'social-button' %>
+          <%= image_tag 'twitter.png', class: 'social-button' %>
+          <%= image_tag 'facebook.png', class: 'social-button' %>
+      </div>
 </div>
 </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
