MInor desgin change

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,7 +14,7 @@
   <br />
   <%= image_tag course.image, class: 'img-responsive' %>
   <div class="col-sm-4 col-xs-12 text-center">
-    <%= link_to 'Button', '#', class: 'btn btn-primary btn-large' %>
+    <%= link_to 'Learn more...', course_path(course), class: 'btn btn-primary btn-large' %>
   </div>
   <br class="clr" />
   <% end %>
