--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -13,10 +13,6 @@
   color: white;
 }
 
-/*#footer {
-  background-color: #1EC952;
-}*/
-
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
   font-weight: 100;
@@ -59,7 +55,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 body {
-  background: url('bg.png');
+  /*background: url('bg.png');*/
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
